// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineHeight renders 0 1`] = `
Array [
  .c0 {
  line-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders function 1`] = `
Array [
  .c0 {
  line-height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders invalid theme path 1`] = `
Array [
  .c0 {
  line-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders negative number 1`] = `
Array [
  .c0 {
  line-height: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-height: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-height: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    line-height: July;
  }
}

@media April {
  .c0 {
    line-height: August;
  }
}

@media January {
  .c0 {
    line-height: September;
  }
}

@media April {
  .c0 {
    line-height: November;
  }
}

@media June {
  .c0 {
    line-height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-height: July;
  }
}

@media April {
  .c0 {
    line-height: August;
  }
}

@media January {
  .c0 {
    line-height: September;
  }
}

@media April {
  .c0 {
    line-height: November;
  }
}

@media June {
  .c0 {
    line-height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-height: January;
  }
}

@media April {
  .c0 {
    line-height: December;
  }
}

@media January {
  .c0 {
    line-height: April;
  }
}

@media April {
  .c0 {
    line-height: May;
  }
}

@media June {
  .c0 {
    line-height: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-height: January;
  }
}

@media April {
  .c0 {
    line-height: December;
  }
}

@media January {
  .c0 {
    line-height: April;
  }
}

@media April {
  .c0 {
    line-height: May;
  }
}

@media June {
  .c0 {
    line-height: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders postitive number 1`] = `
Array [
  .c0 {
  line-height: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders string 1`] = `
Array [
  .c0 {
  line-height: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineHeight renders valid theme path 1`] = `
Array [
  .c0 {
  line-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
